--- a/project2/style.css
+++ b/project2/style.css
@@ -54,6 +54,7 @@ font-weight: 600;
 #result{
   padding-top: 10px;
   font-weight: 600;
+  font-size: 20px;
   text-align: center;
-  color: rgb(22, 34, 22);
+  color: rgb(51, 39, 160);
 }
