--- a/project4/style.css
+++ b/project4/style.css
@@ -9,9 +9,10 @@ body{
   margin-top: 10%;
   text-align: center;
 }
-input{
+input:first-child{
   display: block;
   margin: auto;
+  width: 50%;
   margin-bottom: 10px;
   padding: 10px;
   border: none;
